2004-12-09  Adam Heath  <doogie@brainfood.com>
	* scripts/sort-warnings.pl, scripts/LogWarning.pm,
	  scripts/JikesWarning.pm, scripts/GCCWarning.pm:
	  Rewritten to be a 'bit' more modular.

2004-12-09  Adam Heath  <doogie@brainfood.com>

	* scripts/sort-warnings.pl: Several new warnings detected, including
	  some from jikes.

2004-12-09  Adam Heath  <doogie@brainfood.com>

	* configure, configure.ac: If --with-jikes is given with no value,
	  then use "$JIKESPROG +Pno-switchcheck +Pno-shadow +E."

2004-12-09  Adam Heath  <doogie@brainfood.com>

	* binreloc/prefix.c, binreloc/prefix.h, kaffe/kaffe/main.c,
	  kaffe/kaffevm/stackTrace.c, kaffe/kaffevm/support.c,
	  kaffe/kaffevm/support.h, kaffe/kaffevm/thread.c,
	  kaffe/kaffevm/jni/jni.c, libraries/clib/native/Arrays.c,
	  libraries/clib/net/NetworkInterface.c,
	  libraries/clib/net/PlainSocketImpl.c:
	  Fix several gcc warnings.  725 -> 691, on my machine.
	  Note, that do_execute_java_class_method and do_execute_java_method
	  (and the _v counterparts) have changed their signatures.

2004-12-09  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/jit3/basecode.c, kaffe/kaffevm/jit3/basecode.h,
	  kaffe/kaffevm/jit3/icode.c:
	  Fix 'function returns an aggretate type' warning.

2004-12-09  Adam Heath  <doogie@brainfood.com>

	* tools/gjdoc/javalib/Makefile.am, tools/gjdoc/javalib/Makefile.in:
	  Fix broken invocation of rebuildLib, by exporting vars in the
	  Makefile.

2004-12-08  Adam Heath  <doogie@brainfood.com>

	* kaffe/xprof/debugFile.c: s/null/NULL/, I hand-applied a diff.

2004-12-08  Adam Heath  <doogie@brainfood.com>

	* kaffe/xprof/debugFile.c: When printing out the DIA_SourceFile
	  record, if addr is null, hard-code 0 as the value; otherwise,
	  fprintf prints '(nil)', and ld complains when linking.

2004-12-08  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c:
	  Call unprotectThreadList *before* calling pthread_exit.  This