@@ -17,10 +17,11 @@ use GCCWarning;
 #          -Wmissing-declarations -Wmissing-noreturn -Wredundant-decls -Wnested-externs -Winline -Wlong-long
 
 my $path_prefix_regex = qr/\/?([^\/]*\/)*?/;
-my $prog_regex = qr/(${path_prefix_regex})(kaffeh|config\.status|rm|mv|mkdir|ar|ranlib|echo|gmake|sh|sed|cd)\b| ?gcc/;
+my $prog_regex = qr/ ?\(?(${path_prefix_regex})\b(kaffeh|config\.status|rm|mv|mkdir|ar|ranlib|echo|gmake|sh|sed|cd|grep|cat|gcc|touch|test|make)\b/;
 my $kjc_regex = qr/\[ (?:start compilation|compilation ended|parsed|checked body|optimized and generated|checked interfaces)/;
 my $shell_keywords = qr/(?:for|then|if) /;
 my $make_regex = qr/make\[\d+\]: (?:(?:Entering|Leaving) directory|Nothing to be done for)/;
+my $libtool_regex = qr/generating symbol list for/;
 
 my $skip_line_regex = qr,
     (
@@ -39,7 +40,9 @@ my $skip_line_regex = qr,
             depfile|
             \ \ adding:|
             $kjc_regex|
+            $libtool_regex|
             <GC|
+            \(dstdir=|
             Compiling\ classes\ from|
             \ [0-9][0-9]+\.[0-9]%
         )|
